syntax = "proto3";

package common;

option java_package = "com.risingwave.proto";
option optimize_for = SPEED;

message Status {
  enum Code {
    UNSPECIFIED = 0;
    OK = 1;
    UNKNOWN_WORKER = 2;
  }
  Code code = 1;
  string message = 2;
}

message HostAddress {
  string host = 1;
  int32 port = 2;
}

// Encode which host machine an actor resides.
message ActorInfo {
  uint32 actor_id = 1;
  HostAddress host = 2;
}

enum WorkerType {
  UNSPECIFIED = 0;
  FRONTEND = 1;
  COMPUTE_NODE = 2;
  RISE_CTL = 3;
  COMPACTOR = 4;
  META = 5;
}

message ParallelUnit {
  uint32 id = 1;
  uint32 worker_node_id = 2;
}

message WorkerNode {
  enum State {
    UNSPECIFIED = 0;
    STARTING = 1;
    RUNNING = 2;
  }
  // Fields in `Property` that doesn't fit current worker type are just ignored by receiver.
  message Property {
    bool is_streaming = 2;
    bool is_serving = 3;
  }
  uint32 id = 1;
  WorkerType type = 2;
  HostAddress host = 3;
  State state = 4;
  // TODO #8940 `parallel_units` should be moved into `Property`
  repeated ParallelUnit parallel_units = 5;
  Property property = 6;
}

message Buffer {
  enum CompressionType {
    UNSPECIFIED = 0;
    NONE = 1;
  }
  CompressionType compression = 1;
  bytes body = 2;
}

// Vnode mapping for stream fragments. Stores mapping from virtual node to parallel unit id.
message ParallelUnitMapping {
  repeated uint32 original_indices = 1;
  repeated uint32 data = 2;
}

message BatchQueryEpoch {
  oneof epoch {
    uint64 committed = 1;
    uint64 current = 2;
    uint64 backup = 3;
  }
}

enum Direction {
  DIRECTION_UNSPECIFIED = 0;
  DIRECTION_ASCENDING = 1;
  DIRECTION_DESCENDING = 2;
}

enum NullsAre {
  NULLS_ARE_UNSPECIFIED = 0;
  NULLS_ARE_LARGEST = 1;
  NULLS_ARE_SMALLEST = 2;
}

message OrderType {
  Direction direction = 1;
  NullsAre nulls_are = 2;
}

// Column index with an order type (ASC or DESC). Used to represent a sort key (`repeated ColumnOrder`).
message ColumnOrder {
  uint32 column_index = 1;
  OrderType order_type = 2;
}
